# robofleet_client

./: .gitignore  .gitmodules  CMakeLists.txt  Pull requests 1.desktop  README.md  package.xml  setup.py
cfg/: example.yaml
cmake/: RobofleetPluginsTargets.cmake
include/private/robofleet_client/: RosClientNode.hpp
include/public/robofleet_client/: ROSMsgHandlers.hpp
include/robofleet_client/: MessageScheduler.hpp  ROSMsgHandlers.hpp  ROSSrvHandlers.hpp  base_schema_generated.h  common_conversions.hpp
launch/: client.launch  gen_plugins.launch
robofleet_client/generate/msg2fbs/: makefile  msg2fbs.py  msg_util.py
robofleet_client/generate/templates/: template_CMakeLists  template_common_header  template_common_impl  template_msg_header  template_msg_impl  template_msg_plugin_description  template_packagexml  template_srv_header  template_srv_impl  template_srv_plugin_description
scripts/: generate_plugin_pkg.py
scripts/generate/: generate_plugin_pkg.py  msg_utils.py
scripts/generate/msg2fbs/: makefile  msg2fbs.py  msg_util.py
scripts/generate/output/std_srvs_robofleet/: CMakeLists.txt  package.xml  plugin_description.xml
scripts/generate/output/std_srvs_robofleet/include/std_srvs_robofleet/: EmptyRequest.h  EmptyResponse.h  SetBoolRequest.h  SetBoolResponse.h  TriggerRequest.h  TriggerResponse.h
scripts/generate/output/std_srvs_robofleet/src/: EmptyRequest.cpp  EmptyResponse.cpp  SetBoolRequest.cpp  SetBoolResponse.cpp  TriggerRequest.cpp  TriggerResponse.cpp
scripts/generate/templates/: template_CMakeLists  template_class_header  template_class_impl  template_common_header  template_common_impl  template_msg_header  template_msg_impl  template_packagexml  template_plugin_description  template_srv_header  template_srv_impl  template_srvin_header  template_srvin_impl  template_srvout_header  template_srvout_impl
src/: CMakeLists.txt  MessageScheduler.cpp  MessageScheduler.hpp  MessageSchedulerLib.hpp  ROSMsgHandlers.cpp  ROSSrvHandlers.cpp  RosClientNode.cpp  RosClientNode.hpp  RosClientNode.tpp  WebVizConstants.hpp  WsClient.hpp  WsServer.hpp  common_conversions.cpp  config.hpp  decode_ros.hpp  encode_ros.hpp  main.cpp
test/: CMakeLists.txt  client.test  client_test.cpp  test.yaml
