<?xml version="1.0"?>
<package format="2">
  <name>robofleet_client</name>
  <version>1.0.0</version>
  <description>Client for ROS nodes to send messages to Robofleet.</description>

  <maintainer email="blakeanderson@utexas.edu">Blake Anderson</maintainer>

  <author email="blakeanderson@utexas.edu">Blake Anderson</author>
  <author email="kvsikand@utexas.edu">Kavan Sikand</author>
  <author email="logan.zartman@utexas.edu">Logan Zartman</author>
  <author email="srabiee@utexas.edu">Sadegh Rabiee</author>
  <author email="joydeepb@cs.utexas.edu">Joydeep Biswas</author>

  <license>MIT</license>

  <url>https://github.com/UTNuclearRobotics/robofleet_client</url>
  <url>https://arxiv.org/abs/2103.06993</url>

  <url>https://robotics.me.utexas.edu/</url>
  <url>https://amrl.cs.utexas.edu/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>pluginlib</depend>
  <depend>yaml-cpp</depend>
  <depend>message_generation</depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rosmsg</exec_depend>
  <exec_depend>rospack</exec_depend>
</package>